[package]
name = "kurtbuilds_user_backtrace"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A very small library for smaller backtraces that only contain user relevant information"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "user_backtrace"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
